update functions that get collection list and get collection detail